# signalbroker-server

./: LICENSE  README.md  mix.exs
apps/app_counter/: mix.exs
apps/app_counter/config/: config.exs
apps/app_counter/lib/: counter.ex  csv.ex  timer.ex
apps/app_counter/test/: app_counter_test.exs
apps/app_debug/: mix.exs
apps/app_debug/config/: config.exs
apps/app_debug/lib/: debug.ex  route_ets.ex  route_process.ex
apps/app_debug/test/: app_debug_test.exs  routing_test.exs  test_helper.exs
apps/app_lin/: mix.exs
apps/app_lin/config/: config.exs
apps/app_lin/docs/: getconfig.uml  readme.txt
apps/app_lin/lib/: app_lin.ex  descriptions.ex  ldf.ex  lin_arduino_config.ex  lin_config_router.ex  lin_diagnostics.ex  lin_master_app.ex  scheduler.ex
apps/app_lin/test/: app_lin_test.exs  test_helper.exs
apps/app_ngcan/: mix.exs
apps/app_ngcan/config/: benchc.json  config.exs
apps/app_ngcan/lib/: app_ngcan.ex  application.ex  can_connector.ex
apps/app_ngcan/test/: app_ngcan_test.exs
apps/app_telnet/: README.md  mix.exs
apps/app_telnet/config/: config.exs  prod.exs
apps/app_telnet/lib/: signal_service.ex  socket_holder.ex
apps/app_telnet/test/: signal_service_test.exs
apps/app_udpcan/: README.md  mix.exs
apps/app_udpcan/config/: config.exs
apps/app_udpcan/lib/: app_udpcan.ex  canudp.ex  server.ex
apps/app_udpcan/test/: app_udpcan_test.exs  test_helper.exs
apps/app_unixds/: .gitignore  README.md  mix.exs
apps/app_unixds/c_lib/: CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  benchb.c  csunixds.c  csunixds.in.h  doxygen.sh  elixir.mk  fake_mode.c  powertrain.c  sample.c  testunit.c
apps/app_unixds/config/: config.exs  test_lin1.json
apps/app_unixds/lib/: application.ex  appsup.ex  client.ex  (+3 more)
apps/diagnostics/: mix.exs
apps/fake_can/: README.md  mix.exs
apps/flexray/: README.md  mix.exs
apps/grpc_service/: README.md  mix.exs
apps/payload/: README.md  mix.exs
apps/reflector/: README.md  mix.exs
apps/signal_base/: README.md  mix.exs
apps/util/: .gitignore  README.md  mix.exs
config/: config.exs
configuration/: interfaces.json  interfaces_referense.json
rel/: config.exs
(+95 files in other folders)
